# dot

./: .gitignore  HEALTH_SHORTCUT_SETUP.md  README.md  diarize.py  identify_speakers.py  package-lock.json  package.json  record_audio.sh  summarize_meeting.py  transcribe.sh  transcribe_speaker.py  tsconfig.json
dot-app/: index.html  package-lock.json  package.json  vite.config.ts
dot-app/src/: App.tsx  Dot.tsx  Input.tsx  api.ts  styles.css
dot-app/src-tauri/: Cargo.toml  tauri.conf.json
dot-app/src-tauri/capabilities/: default.json
dot-app/src-tauri/src/: lib.rs  main.rs
dot-app/src/components/: ChatBubble.css  ChatBubble.tsx  ContextBar.css  ContextBar.tsx  Dot.css  Dot.tsx  FollowUpChips.css  FollowUpChips.tsx  Input.css  Input.tsx  QuickActions.css  QuickActions.tsx  Response.css  Response.tsx  ThinkingText.css  ThinkingText.tsx
src/: agent.ts  cli.ts  server.ts
src/commands/: meeting.ts
src/llm/: router.ts
src/memory/: store.ts
src/tools/: action-executor.ts  calendar.ts  context-bar.ts  conversation-manager.ts  daily-briefing.ts  email-classifier.ts  focus-mode.ts  follow-up-suggestions.ts  gmail.ts  goals.ts  google-auth.ts  health-data.ts  learning-memory.ts  meeting-prep.ts  notion-tasks.ts  notion.ts  nudges.ts  onboarding.ts  personality-engine.ts  predictive-nudges.ts  slack.ts  smart-scheduling.ts  user-profile.ts  weekly-review.ts  wellness-analyzer.ts
